<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 	<ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"      
        android:src="@drawable/cca_logo" /> 
    <TableLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/logo"
        android:layout_marginTop="10dp" >
 		<TableRow>
    		<TextView 
    		    android:text="@string/text_name"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/name_field"
    	    	android:hint="@string/text_name"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/address"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/address_field"
    	    	android:hint="@string/address"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	  <TableRow>
    		<TextView 
    		    android:text="@string/address_line_2"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/address_2_field"
    	    	android:hint="@string/address_line_2"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/city"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/email_field"
    	    	android:hint="@string/city"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/state"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/state"
    	    	android:hint="@string/state"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/zip"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/zip_field"
    	    	android:hint="@string/zip"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
     </TableLayout>
     
    <RelativeLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:layout_centerHorizontal="true"
    	android:layout_alignParentBottom="true" >
    	<Button
    	    android:id="@+id/nextButton"
    	    android:layout_width="120dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="25dp"
    	    android:text="@string/next" />
    	<Button
    	    android:id="@+id/cancelButton"
    	    android:layout_width="120dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="25dp"
    	    android:layout_marginLeft="50dp"
    	    android:layout_toRightOf="@+id/nextButton"
    	    android:text="@string/cancel" /> 
    </RelativeLayout>
    
</RelativeLayout>