<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 	<ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"      
        android:src="@drawable/cca_logo" /> 
    <TableLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/logo"
        android:layout_marginTop="10dp" >
    	 <TableRow>
    		<TextView 
    		    android:text="@string/Username"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/username_field"
    	    	android:hint="@string/Username"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/Password"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/pswd_field"
    	    	android:hint="@string/Password"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/retype_password"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/retype_pswd_field"
    	    	android:hint="@string/Password"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/email"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/email_field"
    	    	android:hint="@string/email"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
    	 <TableRow>
    		<TextView 
    		    android:text="@string/phone"
    	 		android:textAppearance="?android:attr/textAppearanceMedium" 
    	 		android:layout_weight="0.2"  
    	    	android:textColor="#ffffff" />
    	 	<EditText
    	    	android:id="@+id/phone_field"
    	    	android:hint="@string/phone"
    	    	android:inputType="textMultiLine"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_weight="0.5" />
    	 </TableRow>
     </TableLayout>
     
     
    <RelativeLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:layout_centerHorizontal="true"
    	android:layout_alignParentBottom="true" >
    	<Button
    	    android:id="@+id/registerButton"
    	    android:layout_width="120dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="25dp"
    	    android:text="@string/Register" />
    	<Button
    	    android:id="@+id/cancelButton"
    	    android:layout_width="120dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="25dp"
    	    android:layout_marginLeft="50dp"
    	    android:layout_toRightOf="@+id/registerButton"
    	    android:text="@string/cancel" /> 
    </RelativeLayout>
    
</RelativeLayout>