<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TableLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
     	<TextView
        	android:id="@+id/entertainer_name"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center_vertical|center_horizontal" />   
    	<ImageView
    	    android:id="@+id/image"
    	    android:contentDescription="@string/desc"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" 
    	    android:layout_marginTop="25dp"
    	    android:layout_marginBottom="50dp" />  
    	    <TextView
        	android:id="@+id/description_tag"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="50dp"
        	android:text="@string/description" />  
    	    <ScrollView 
    	        android:layout_width="fill_parent"
    	    	android:layout_height="wrap_content" >
    	        <TextView
    	   		android:id="@+id/entertainer_description"
    	    	android:layout_width="280dp"
    	    	android:layout_height="wrap_content" 
    	    	android:gravity="center_vertical|center_horizontal" /> 
   	 	    </ScrollView> 
   	</TableLayout>
   		<Button
   	    	android:id="@+id/book_button"
   	     	android:layout_width="120dp"
   	     	android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_centerInParent="true"
        	android:text="@string/book" />
	
</RelativeLayout>